# isp-01-equation

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  equation.cpp  equation.h  main.cpp
test/: CMakeLists.txt  equation_my_test.cpp  equation_test.cpp  my_test.cpp  my_test.h  test.cpp
